# fastrq

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: error.rs  lib.rs  quantizer.rs  rotation.rs
tests/: accuracy.rs
